--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,22 +8,22 @@
   "theme_color": "#003366",
   "icons": [
     {
-      "src": "/src/images/icons/app-icon-96x96",
+      "src": "/src/images/icons/app-icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/src/images/icons/app-icon-144x144",
+      "src": "/src/images/icons/app-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/src/images/icons/app-icon-256x256",
+      "src": "/src/images/icons/app-icon-512x512.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/src/images/icons/app-icon-512x512",
+      "src": "/src/images/icons/app-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
